@@ -62,6 +62,8 @@
 
 - default distribution is now Arch
 
+- default manager configuration is now Arch
+
 *** Xmobar
 
 - CPU display now refreshes every 5 seconds instead of every 1
